@@ -1,3 +1,7 @@
+Fri Jan 28 00:04:46 CET 2005	Michael Neumann <mneumann@ntecs.de>
+
+	* added Md5IdGenerator, removed method #current from SimpleIdGenerator
+
 Thu Jan 27 18:45:44 CET 2005	Michael Neumann <mneumann@ntecs.de>
 
 	* Implemented a new OgScaffolder, which now is more like Rails one.
